styles and navigation

--- a/src/app/components/app/app.html
+++ b/src/app/components/app/app.html
@@ -1,8 +1,7 @@
+<app-header>
+</app-header>
 
-<app-header></app-header>
-
-<steps></steps>
-
-<div class="body container" ui-view></div>
+<div class="body"
+     ui-view></div>
 
 <app-footer></app-footer>
