--- a/src/app/components/car/car.html
+++ b/src/app/components/car/car.html
@@ -1,11 +1,12 @@
 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
-    <a href="">
-        <img class="img-responsive" err-src="{{$ctrl.defaultImg}}" ng-src="{{$ctrl.car.imgUrl}}" alt="{{$ctrl.car.description}}">
-    </a>
-    <div class="text-center">
-        <div>
-            <h3><a>{{$ctrl.car.name}}</a></h3>
-        </div>
-        <div>{{$ctrl.car.description}}</div>
-    </div>
+	<a ng-click="$ctrl.goTo($ctrl.car.id); $ctrl.onSelect({item:$ctrl.car})">
+		<img class="img-responsive"
+		     err-src="{{$ctrl.defaultImg}}"
+		     ng-src="{{$ctrl.car.imgUrl}}"
+		     alt="{{$ctrl.car.description}}">
+		<div class="text-center">
+			<h3 class="m-t-sm">{{$ctrl.car.name}}</h3>
+			<p class="m-t-sm">{{$ctrl.car.description}}</p>
+		</div>
+	</a>
 </div>
