--- a/src/assets/styles/sass/partials/_figures.scss
+++ b/src/assets/styles/sass/partials/_figures.scss
@@ -1,25 +1,17 @@
-app-footer {
-    height: 100px;
-}
-
-app-footer,
-app-header {
-    display: block;
-}
-
-app-header {
-    height: 65px;
-    position: fixed;
-    right: 0;
-    left: 0;
-}
-
 body {
-    background-color: #f0f0f0;
+	background-color: #fff;
 }
 
-app>div.body {
-    min-height: 760px;
-    display: block;
-    margin-top:65px;
+.m-t-md {
+	margin-top: 20px;
+}
+
+.m-t-sm {
+	margin-top: 5px;
+}
+
+div.body {
+	min-height: 780px;
+	display: block;
+	margin-top: 68px;
 }
