--- a/src/app/components/select-options/steps/steps.html
+++ b/src/app/components/select-options/steps/steps.html
@@ -1,27 +1,27 @@
 <ul class="steps steps-5">
+	<li>
+		<a href="#"
+		   title="">
+			<i class="fa fa-check-circle"></i> Step 1
+		</a>
+	</li>
 	<li class="current">
 		<a href="#"
 		   title="">
-			<i class="fa fa-check-circle"></i> Steps
+			<i class="fa fa-circle-o"></i> Step 2
 		</a>
 	</li>
 	<li>
 		<a href="#"
 		   title="">
-			Steps
-		</a>
-	</li>
-	<li>
-		<a href="#"
-		   title="">
-			Steps
+			<i class="fa fa-circle-o"></i> Step 3
 		</a>
 	</li>
 
 	<li>
 		<a href="#"
 		   title="">
-			Steps
+			<i class="fa fa-circle-o"></i> Step 4
 		</a>
 	</li>
 </ul>
