fix header margins

--- a/src/app/components/select-options/steps/steps.html
+++ b/src/app/components/select-options/steps/steps.html
@@ -2,26 +2,26 @@
 	<li>
 		<a href="#"
 		   title="">
-			<i class="fa fa-check-circle"></i> Step 1
+			<i class="fa fa-check-circle"></i> <span class="hidden-xs ">Step 1</span>
 		</a>
 	</li>
 	<li class="current">
 		<a href="#"
 		   title="">
-			<i class="fa fa-circle-o"></i> Step 2
+			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Step 2</span>
 		</a>
 	</li>
 	<li>
 		<a href="#"
 		   title="">
-			<i class="fa fa-circle-o"></i> Step 3
+			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Step 3</span>
 		</a>
 	</li>
 
 	<li>
 		<a href="#"
 		   title="">
-			<i class="fa fa-circle-o"></i> Step 4
+			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Step 4</span>
 		</a>
 	</li>
 </ul>
