steps link to views, first step display data

--- a/src/app/components/select-options/steps/steps.html
+++ b/src/app/components/select-options/steps/steps.html
@@ -1,27 +1,23 @@
 <ul class="steps steps-5">
-	<li>
-		<a href="#"
-		   title="">
-			<i class="fa fa-check-circle"></i> <span class="hidden-xs ">Step 1</span>
+	<li ui-sref-active="current">
+		<a ui-sref="app.select-options.step-one">
+			<i class="fa fa-check-circle"></i> <span class="hidden-xs ">Μοντελο</span>
 		</a>
 	</li>
-	<li class="current">
-		<a href="#"
-		   title="">
-			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Step 2</span>
+	<li ui-sref-active="current">
+		<a ui-sref="app.select-options.step-two">
+			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Χρώμα</span>
 		</a>
 	</li>
-	<li>
-		<a href="#"
-		   title="">
-			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Step 3</span>
+	<li ui-sref-active="current">
+		<a ui-sref="app.select-options.step-three">
+			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Εξοπλισμός</span>
 		</a>
 	</li>
 
-	<li>
-		<a href="#"
-		   title="">
-			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Step 4</span>
+	<li ui-sref-active="current">
+		<a ui-sref="app.select-options.step-four">
+			<i class="fa fa-circle-o"></i> <span class="hidden-xs ">Σύνοψη</span>
 		</a>
 	</li>
 </ul>
