--- a/src/app/components/car/car.html
+++ b/src/app/components/car/car.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
-	<a ng-click="$ctrl.goTo($ctrl.car.id); $ctrl.onSelect({item:$ctrl.car})">
+	<a ng-click="$ctrl.onSelect({item:$ctrl.car})">
 		<img class="img-responsive"
 		     err-src="{{$ctrl.defaultImg}}"
 		     ng-src="{{$ctrl.car.imgUrl}}"
