--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -9,6 +9,7 @@
 @import "partials/steps";
 @import "partials/mixins";
 @import "partials/colors";
+@import "partials/buttons";
 
 //Themes
 @import "themes/vw";
