--- a/src/app/components/select-family/selectfamily.html
+++ b/src/app/components/select-family/selectfamily.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
 	<div class="row m-t-md">
-		<h1 class="text-center">Διαμορφώστε το Volkswagen σας</h1>
+		<h1 class="text-center">Διαμορφώστε το {{$ctrl.make.ModelDescription}} σας</h1>
 	</div>
 
 	<div class="row m-t-md">
 
 		<car car="item"
 		     on-select="$ctrl.selectFamily(item)"
-		     ng-repeat="item in $ctrl.cars track by $index"></car>
+		     ng-repeat="item in $ctrl.families track by $index"></car>
 
 
 	</div>
