--- a/src/app/components/select-options/selectoptions.html
+++ b/src/app/components/select-options/selectoptions.html
@@ -1,5 +1,8 @@
-<steps></steps>
+<steps steps-flag="$ctrl.completedSteps"
+       model="$ctrl.model"
+       color="$ctrl.color"></steps>
 
-<div class="padding o-hidden" ui-view>
-    
+<div class="padding o-hidden"
+     ui-view>
+
 </div>
