--- a/src/assets/styles/sass/partials/_figures.scss
+++ b/src/assets/styles/sass/partials/_figures.scss
@@ -4,6 +4,10 @@ body {
 	background-color: $white;
 }
 
+.m-t-lg {
+	margin-top: 35px;
+}
+
 .m-t-md {
 	margin-top: 20px;
 }
@@ -17,8 +21,14 @@ body {
 }
 
 .o-hidden {
-	overflow:hidden;
+	overflow: hidden;
 }
+
+a[disabled=disabled] {
+	pointer-events: none;
+	cursor: default;
+}
+
 
 table.table.table-hover {
 	tbody {
