--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -10,6 +10,7 @@
 @import "partials/mixins";
 @import "partials/colors";
 @import "partials/buttons";
+@import "partials/box";
 
 //Themes
 @import "themes/vw";
