--- a/src/assets/styles/sass/themes/_audi.scss
+++ b/src/assets/styles/sass/themes/_audi.scss
@@ -76,5 +76,11 @@
 			background-color: $audi-special;
 			color: $white
 		}
+	} //Box
+	div.box div.box-header {
+		background-color: $audi-dark;
+		color: $white;
 	}
+
+
 }
