--- a/src/app/components/select-options/step-four/stepfour.html
+++ b/src/app/components/select-options/step-four/stepfour.html
@@ -1,1 +1,82 @@
-Step 4
+<div class="container-fluid">
+
+
+	<div class="row vertical-align">
+
+		<div class="col-md-4 col-md-offset-2">
+			<img src="assets/img/car-1.png"
+			     alt="">
+
+		</div>
+
+		<div class="col-md-4">
+			<div class="box">
+				<div class="box-header">
+					<h2>  Πληροφορίες</h2>
+				</div>
+				<div class="box-body">
+
+					<div class="row">
+						<div class="col-md-4">
+							<label>Μάρκα</label>
+						</div>
+						<div class="col-md-8">
+							<p>{{$ctrl.make.ModelDescription}}</p>
+						</div>
+					</div>
+					<div class="row m-t-md">
+						<div class="col-md-4">
+							<label>Οικογένεια</label>
+						</div>
+						<div class="col-md-8">
+							<p>{{$ctrl.make.ModelDescription}}</p>
+						</div>
+					</div>
+					<div class="row m-t-md">
+						<div class="col-md-4">
+							<label>Μοντέλο</label>
+						</div>
+						<div class="col-md-8">
+							<p>{{$ctrl.model.ModelDescription}}</p>
+						</div>
+					</div>
+					<div class="row m-t-md">
+						<div class="col-md-4">
+							<label>Χρώμα</label>
+						</div>
+						<div class="col-md-8">
+							<p>{{$ctrl.color.ModelDescription}}</p>
+						</div>
+					</div>
+					<div class="row m-t-md">
+						<div class="col-md-4">
+							<label>Εξοπλισμός από λίστα:</label>
+						</div>
+						<div class="col-md-8">
+							<div ng-repeat="equipment in $ctrl.equipment.autoEquipments track by $index"
+							     class="row">
+								<div class="col-md-12"><p>{{equipment.OptionCode}}</p></div>
+							</div>
+						</div>
+					</div>
+
+                    <div class="row m-t-md">
+						<div class="col-md-4">
+							<label>Εξοπλισμός που προστέθηκε χειροκίνητα:</label>
+						</div>
+						<div class="col-md-8">
+							<div ng-repeat="equipment in $ctrl.equipment.manualEquipments track by $index"
+							     class="row">
+								<div class="col-md-12"><p>{{equipment.code}}</p></div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+
+</div>
