--- a/src/assets/styles/sass/themes/_vw.scss
+++ b/src/assets/styles/sass/themes/_vw.scss
@@ -77,5 +77,11 @@
 			background-color: $vw-special;
 			color: $white
 		}
+	} //Box
+	div.box div.box-header {
+		background-color: $vw-dark;
+		color: $white;
 	}
+
+
 }
